Added radio stations and edited adverts
Added "Q-Music NL" as a radio station
And edited the adverts

--- a/radio/client_package/package.json
+++ b/radio/client_package/package.json
@@ -6,6 +6,7 @@
   "author": "AHK1221",
   "license": "MIT",
   "websites": [
-      "stream.radioreklama.bg"
+      "stream.radioreklama.bg",
+	  "icecast-qmusic.cdp.triple-it.nl"
   ]
 }
