--- a/shameless-adverts/config.json
+++ b/shameless-adverts/config.json
@@ -16,7 +16,7 @@
         "color": "green"
     },
 	{
-	    "message": "Press "," or "." while in a vehicle to switch radio stations,",
+	    "message": "Press , or . while in a vehicle to switch radio stations,",
         "color": "green"
 	},
     {
